# mcp-server-mattermost

./: CHANGELOG.md  Dockerfile  README.md  llms.txt  mkdocs.yml  pyproject.toml
docs/: authentication.md  best-practices.md  configuration.md  docker.md  quickstart.md
docs/tools/: index.md
src/mcp_server_mattermost/: __init__.py  auth_factory.py  auth_oauth.py  client.py  config.py  enums.py  server.py  tls.py
src/mcp_server_mattermost/models/: __init__.py  channel.py  draft.py
src/mcp_server_mattermost/tools/: drafts.py
tests/: test_capability_meta.py  test_client.py  test_config.py  test_enums.py  test_models.py  test_server.py  test_tls.py  test_token_flow.py
tests/integration/: test_channels.py
tests/models/: test_channel.py
tests/test_tools/: conftest.py  test_drafts.py  test_tool_tags.py
