[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-mattermost"
version = "0.5.0"
description = "MCP server for Mattermost integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ruslan Tabolin", email = "ruslan.tabolin@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "mattermost", "llm", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "cachetools>=5.0",
    "certifi",
    "fastmcp>=3.0.0,<4",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=9.0.0",
    "wsproto>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers[postgres]>=4.0",
    "pymarkdownlnt>=0.9.35",
    "types-cachetools",
]
docs = [
    "mkdocs-material",
]

[project.scripts]
mcp-server-mattermost = "mcp_server_mattermost:main"

[project.urls]
Homepage = "https://github.com/cloud-ru-tech/mcp-server-mattermost"
Documentation = "https://mcp-server-mattermost.readthedocs.io/"
Repository = "https://github.com/cloud-ru-tech/mcp-server-mattermost"
Issues = "https://github.com/cloud-ru-tech/mcp-server-mattermost/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_mattermost"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["-ra", "-v", "--cov=mcp_server_mattermost", "--ignore=tests/integration"]
pythonpath = ["src", "."]
markers = [
    "integration: integration tests (require Mattermost server or Docker)",
    "slow: tests that use wait_for_indexing or take >5s",
    "destructive: tests that delete resources",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma missing
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in `__init__`
    "N818",    # Exception name should be named with an Error suffix
    "RUF001",  # String contains ambiguous unicode character
    "RUF002",  # Docstring contains ambiguous unicode character
    "RUF003",  # Comment contains ambiguous unicode character
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",       # Missing docstrings
    "PT011",   # pytest.raises() without match
    "S101",    # Use of assert
    "S105",    # Possible hardcoded password (test fixtures)
    "S106",    # Possible hardcoded password assigned to argument
    "ANN",     # Missing type annotations
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument (pytest fixtures)
    "SLF001",  # Private member accessed (testing internal state)
    "PLR2004", # Magic value comparison
    "PLC0415", # Import outside top-level (common pytest pattern)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mcp_server_mattermost"]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["fastmcp.*", "tenacity.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["mcp_server_mattermost"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pymarkdown]
plugins.md013.line_length = 120
plugins.md013.code_block_line_length = 120
plugins.md013.heading_line_length = 120
plugins.md024.siblings_only = true
plugins.md025.enabled = false
plugins.md033.allowed_elements = "div,img,br,details,summary,a,kbd,sub,sup,table,tr,td,th,picture,source,p,h1,h2,h3,!--"
plugins.md036.enabled = false
plugins.md041.enabled = false

